// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load, track, validate - validationOptions={errorOnInvalid: true} 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validation={\\"disabled\\":false,\\"trackInvalid\\":false,\\"errorOnInvalid\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='undefined' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should have required property 'requiredNumber'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in identify properties did not validate against your tracking plan. \`properties\` should have required property 'requiredNumber'.",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should NOT have additional properties (badProp).\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in identify properties did not validate against your tracking plan. \`properties\` should NOT have additional properties (badProp).",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in group properties did not validate against your tracking plan. \`properties\` should have required property 'requiredBoolean'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in group properties did not validate against your tracking plan. \`properties\` should have required property 'requiredBoolean'.",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"'page' schema is empty but properties were found. properties={\\\\\\"pageProp\\\\\\":\\\\\\"a page property\\\\\\"}\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: 'page' schema is empty but properties were found. properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='EventMaxIntForTest' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\",\\"intMax10\\":20} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in EventMaxIntForTest properties did not validate against your tracking plan. \`properties.intMax10\` should be <= 10.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in EventMaxIntForTest properties did not validate against your tracking plan. \`properties.intMax10\` should be <= 10.",
  ],
]
`;

exports[`load, track, validate - validationOptions={trackInvalid: true} 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validation={\\"disabled\\":false,\\"trackInvalid\\":true,\\"errorOnInvalid\\":false}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='undefined' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should have required property 'requiredNumber'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should NOT have additional properties (badProp).\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in group properties did not validate against your tracking plan. \`properties\` should have required property 'requiredBoolean'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"'page' schema is empty but properties were found. properties={\\\\\\"pageProp\\\\\\":\\\\\\"a page property\\\\\\"}\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\",\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='EventMaxIntForTest' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\",\\"intMax10\\":20} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in EventMaxIntForTest properties did not validate against your tracking plan. \`properties.intMax10\` should be <= 10.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
]
`;

exports[`load, track, validate - validationOptions=DEFAULT 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validation=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='undefined' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should have required property 'requiredNumber'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should NOT have additional properties (badProp).\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in group properties did not validate against your tracking plan. \`properties\` should have required property 'requiredBoolean'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"'page' schema is empty but properties were found. properties={\\\\\\"pageProp\\\\\\":\\\\\\"a page property\\\\\\"}\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\",\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='EventMaxIntForTest' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\",\\"intMax10\\":20} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in EventMaxIntForTest properties did not validate against your tracking plan. \`properties.intMax10\` should be <= 10.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
]
`;

exports[`load, track, validate w/ context='{}' 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={} validation=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='undefined' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should have required property 'requiredNumber'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should NOT have additional properties (badProp).\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in group properties did not validate against your tracking plan. \`properties\` should have required property 'requiredBoolean'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"'page' schema is empty but properties were found. properties={\\\\\\"pageProp\\\\\\":\\\\\\"a page property\\\\\\"}\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event No Properties' properties={} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":false,\\"message\\":\\"Passed in context properties did not validate against your tracking plan. \`properties\` should have required property 'requiredString'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":false,\\"message\\":\\"Passed in context properties did not validate against your tracking plan. \`properties\` should have required property 'requiredString'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='context' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='EventMaxIntForTest' properties={\\"intMax10\\":20} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in EventMaxIntForTest properties did not validate against your tracking plan. \`properties.intMax10\` should be <= 10.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"},{\\"valid\\":false,\\"message\\":\\"Passed in context properties did not validate against your tracking plan. \`properties\` should have required property 'requiredString'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
]
`;

exports[`load, track, validate w/ context='undefined' 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context=undefined validation=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='undefined' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"requiredNumber\\":42} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should have required property 'requiredNumber'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='identify' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postIdentify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in identify properties did not validate against your tracking plan. \`properties\` should NOT have additional properties (badProp).\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties=undefined validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in group properties did not validate against your tracking plan. \`properties\` should have required property 'requiredBoolean'.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='group' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "postGroup() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='page' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postPage() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"} validationResponses=[{\\"valid\\":false,\\"message\\":\\"'page' schema is empty but properties were found. properties={\\\\\\"pageProp\\\\\\":\\\\\\"a page property\\\\\\"}\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event No Properties' properties={} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"} validationResponses=[{\\"valid\\":true,\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
  Array [
    "CustomPlugin: ",
    "validate() event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
  Array [
    "CustomPlugin: ",
    "postTrack() userId='test-user-id' event='EventMaxIntForTest' properties={\\"intMax10\\":20} validationResponses=[{\\"valid\\":false,\\"message\\":\\"Passed in EventMaxIntForTest properties did not validate against your tracking plan. \`properties.intMax10\` should be <= 10.\\",\\"pluginId\\":\\"schema-validator\\"},{\\"valid\\":true,\\"pluginId\\":\\"custom\\"}]",
  ],
]
`;
